Bump to testcontainers 2.0.1